@@ -11,46 +11,52 @@ using System.Runtime.Remoting.Channels;
 using System.Runtime.Remoting.Messaging;
 using System.IO;
 using System.Collections;
+using System.Text;
 
 namespace System.Runtime.Remoting.MetadataServices
 {
-        public class SdlChannelSink : IServerChannelSink, IChannelSinkBase
+	public class SdlChannelSink : IServerChannelSink, IChannelSinkBase
 	{
-		[MonoTODO]
+		IServerChannelSink _next;
+		IChannelReceiver _channel;
+		
 		public SdlChannelSink()
 		{
 		}
 
-		public IServerChannelSink NextChannelSink {
-			[MonoTODO]
-			get { throw new NotImplementedException(); }
+		internal SdlChannelSink (IChannelReceiver channel, IServerChannelSink next)
+		{
+			_next = next;
+			_channel = channel;
 		}
 
-		public IDictionary Properties {
-			[MonoTODO]
-			get { throw new NotImplementedException(); }
+		public IServerChannelSink NextChannelSink 
+		{
+			get { return _next; }
+		}
+
+		public IDictionary Properties 
+		{
+			get { return null; }
 		}
 		
-		[MonoTODO]
 		public void AsyncProcessResponse (IServerResponseChannelSinkStack sinkStack,
 						  object state,
 						  IMessage msg,
 						  ITransportHeaders headers,
 						  Stream stream)
 		{
-			throw new NotImplementedException(); 
+			throw new NotSupportedException ();	// Never called
 		}
 
-		[MonoTODO]
 		public Stream GetResponseStream (IServerResponseChannelSinkStack sinkStack,
 						 object state,
 						 IMessage msg,
 						 ITransportHeaders headers)
 		{
-			throw new NotImplementedException(); 
+			return null;
 		}
 
-		[MonoTODO]
 		public ServerProcessing ProcessMessage (IServerChannelSinkStack sinkStack,
 							IMessage requestMsg,
 							ITransportHeaders requestHeaders,
@@ -59,12 +65,36 @@ namespace System.Runtime.Remoting.MetadataServices
 							out ITransportHeaders responseHeaders,
 							out Stream responseStream)
 		{
-			throw new NotImplementedException(); 
-		}
-
-		[MonoTODO]
-		~SdlChannelSink()
-		{
+			string verb = requestHeaders [CommonTransportKeys.RequestVerb] as string;
+			string uri = (string) requestHeaders [CommonTransportKeys.RequestUri];
+			
+			if (verb == "GET" && uri.EndsWith ("?wsdl"))
+			{
+				try
+				{
+					uri = uri.Substring (0, uri.Length - 5);
+					Type type = RemotingServices.GetServerTypeForUri (uri);
+					
+					string url = _channel.GetUrlsForUri (uri)[0];
+					ServiceType st = new ServiceType (type, url);
+					
+					responseStream = new MemoryStream ();
+					MetaData.ConvertTypesToSchemaToStream (new ServiceType[] {st}, SdlType.Wsdl, responseStream);
+					responseStream.Position = 0;
+					responseMsg = null;
+					responseHeaders = new TransportHeaders ();
+					responseHeaders [CommonTransportKeys.ContentType] = "text/xml";
+				}
+				catch (Exception ex)
+				{
+					responseHeaders = new TransportHeaders ();
+					responseHeaders [CommonTransportKeys.HttpStatusCode] = "500";
+					responseStream = new MemoryStream (Encoding.UTF8.GetBytes (ex.ToString ()));
+				}
+				return ServerProcessing.Complete;
+			}
+			else
+				return _next.ProcessMessage (sinkStack, requestMsg, requestHeaders, requestStream, out responseMsg, out responseHeaders, out responseStream);
 		}
 	}
 }
